# EvalX

./: .gitignore  ARCHITECTURE.md  CRITICAL_ISSUES_RESOLVED.md  DEPENDENCY_MANAGEMENT.md  INSTALLATION_GUIDE.md  README.md  future_roadmap.md  pyproject.toml  requirements-lock.txt  setup.py
evalx/: __init__.py  cli.py
evalx/agents/interpreter/: __init__.py
evalx/agents/orchestrator/: __init__.py
evalx/agents/planner/: __init__.py
evalx/core/: base.py  suite.py  types.py
evalx/meta_evaluation/: __init__.py
evalx/metrics/hybrid/: __init__.py
evalx/metrics/llm_judge/: __init__.py  base.py  models.py  prompts.py  structured_output.py
evalx/metrics/multimodal/: __init__.py
evalx/metrics/traditional/: __init__.py  bert_score.py  bleu.py  exact_match.py  levenshtein.py  meteor.py  rouge.py  semantic_similarity.py
evalx/utils/: async_utils.py  cache.py  config.py
evalx/validation/benchmarks/: __init__.py
evalx/validation/human/: __init__.py
evalx/validation/statistical/: __init__.py
examples/: advanced_usage.py  basic_usage.py  future_demo.py
tests/: conftest.py  contextual_generation_tests.py  query_alignment_tests.py  reference_based_tests.py  response_alignment.py  response_quality_tests.py  retrieval_tests.py  test_basic.py  test_coverage.py  test_integration.py  test_performance.py  test_traditional_metrics.py
